--- a/public/test_n_list/test2.html
+++ b/public/test_n_list/test2.html
@@ -7,7 +7,62 @@
 </head>
 
 <body>
+	 <ol type="A">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
 	 
+	 <ol type="a">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+	 
+	 <ol type="i">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+	 
+	 <ol type="I">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+	 
+	 <ol start="10">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+	 
+	 <ol reversed="reversed">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+	 
+	 <ol start="2" type="a">
+	 	<li>윤이나</li>
+	 	<li>전지현</li>
+	 	<li>송중기</li>
+	 	<li>송혜교</li>	 	
+	 </ol>
+
+	<dl>
+		<dt>신년회 공지</dt>
+		<dd>시각 : 2022.01.04</dd>
+		<dd>장소 : 우리집</dd>
+		<dd>시각 : 09:00</dd>
+		<dd>회비 : 300만원</dd>
+	</dl>
 
 </body>
 </html>
