--- a/public/table/table.html
+++ b/public/table/table.html
@@ -4,36 +4,85 @@
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>yina</title>
+<style type="text/css">
+	table, th, td {
+		border: 1px solid red;
+		border-collapse: collapse;
+	}
+	
+	th, td {
+		padding: 15px;
+		}
+</style>
+
 </head>
 
 <body>
-<table border="1">
-	<caption>
-		<p>테이블 설명입니다.</p>
-	</caption>
 
-	<tr>
-		<td width="50px" height="70px">번호</td>
-		<td width="100px">이름</td>
-		<td width="100px">아이디</td>
-		<td width="200px">이메일</td>
-		<td width="200px">전화번호</td>
-	</tr>
-	<tr>
-		<td>1</td>
-		<td>정은지</td>
-		<td>jung</td>
-		<td>jung@naver.com</td>
-		<td>010-1234-4561</td>
-	</tr>
-	<tr>
-		<td>2</td>
-		<td>오하영</td>
-		<td>ohga</td>
-		<td>qektqlk@jqet.com</td>
-		<td>010-6666-8888</td>
-	</tr>
-</table>	 
-
+	<table border="1">
+	
+		<thead>
+			<tr>
+				<th width="50px">No.</th>
+				<th width="100px">이름</th>
+				<th width="100px">아이디</th>
+				<th width="200px">이메일</th>
+				<th width="200px">전화번호</th>
+				<th width="100px">별명</th>
+				<th width="200px">주소</th>
+				<th width="100px">사진</th>
+			</tr>
+		</thead>
+		
+		<tbody>			
+			<tr>
+				<th width="50px">1</th>
+				<th width="100px">라이언</th>
+				<th width="100px">lion</th>
+				<th width="200px">bbbb2@abc.com</th>
+				<th width="200px">010-2222-4567</th>			
+				<th width="100px">사자</th>
+				<th width="200px">서울특별시 성북구</th>
+				<th width="100px"><img src="../2.image/lion.png" width="100"></th>
+			</tr>
+		
+			<tr>
+				<th width="50px">2</th>
+				<th width="100px">튜브</th>
+				<th width="100px">tube</th>
+				<th width="200px">abc@abc.com</th>
+				<th width="200px">010-1234-4567</th>
+				<th width="100px">오리</th>
+				<th width="200px">서울특별시 강동구</th>
+				<th width="100px"><img src="../images/tube.png" width="100"></th>
+			</tr>
+		
+			<tr>
+				<th width="50px">3</th>
+				<th width="100px">무지</th>
+				<th width="100px">muzi</th>
+				<th width="200px">34124@abc.com</th>
+				<th width="200px">010-4564-4567</th>
+				<th width="100px">토끼</th>
+				<th width="200px">서울특별시 강서구</th>
+				<th width="100px"><img src="../images/muzi.png" width="100"></th>
+			</tr>
+		</tbody>
+		
+		<tfoot>		
+			<tr>
+				<th width="50px">4</th>
+				<th width="100px">콘</th>
+				<th width="100px">corn</th>
+				<th width="200px">12table@abc.com</th>
+				<th width="200px">010-5555-4567</th>
+				<th width="100px">악어</th>
+				<th width="200px">서울특별시 강서구</th>
+				<th width="100px"><img src="../images/concon.png" width="100"></th>
+			</tr>
+		</tfoot>
+		
+	</table>
+	 
 </body>
 </html>
