--- a/public/table/link.html
+++ b/public/table/link.html
@@ -36,6 +36,9 @@ th, td {
 		<li><a href="./table_resume.html">이력서(테이블)</a></li>
 		<li><a href="./table_colspan_rowspan.html"><strong>펜션가격(테이블)</strong></a></li>
 	</ol>
-
+	
+	<br>
+		<a href="https://www.naver.com/" target="_blank">네이버</a>
+		<a href="https://www.daum.net/" target="_self">다음</a>
 </body>
 </html>
