--- a/public/table/resume1.html
+++ b/public/table/resume1.html
@@ -56,9 +56,17 @@
 	
 	<br>
 	<br>
+	<!-- extra.html 링크 -->
+	<a href="../2.image/aaa/bbb/ccc/extra.html">extra</a>	
+	
+	<br>
+	<br>
+	<!-- 처음화면 링크 -->
+	<a href="../main.html">Main</a>	
 	
 	<!-- 다음화면 링크 -->
-	<a href="./resume2.html">Next</a>
+	<a href="./resume2.html">Next-></a>
+
 	 
 </body>
 </html>
