--- a/public/table/resume2.html
+++ b/public/table/resume2.html
@@ -48,10 +48,10 @@
 	<br>
 	
 	<!-- 이전화면 링크 -->
-	<a href="./resume1.html">Back</a>
+	<a href="./resume1.html"><-Back</a>
 	
 	<!-- 다음화면 링크 -->
-	<a href="./resume3.html">Next</a>
+	<a href="./resume3.html">Next-></a>
 	 
 </body>
 </html>
