--- a/public/table/resume5.html
+++ b/public/table/resume5.html
@@ -49,10 +49,10 @@
 	<br>
 
 	<!-- 이전화면 링크 -->
-	<a href="./resume4.html">Back</a>
+	<a href="./resume4.html"><-Back</a>
 	
 	<!-- 다음화면 링크 -->
-	<a href="./resume6.html">Next</a>
+	<a href="./resume6.html">Next-></a>
 			 
 </body>
 </html>
