--- a/public/table/resume6.html
+++ b/public/table/resume6.html
@@ -37,10 +37,10 @@
 	<br>
 	
 	<!-- 이전화면 링크 -->
-	<a href="./resume5.html">Back</a>
+	<a href="./resume5.html"><-Back</a>
 	
 	<!-- 처음화면 링크 -->
-	<a href="./resume1.html">Main</a>
+	<a href="../main.html">Main</a>	
 
 </body>
 </html>
