--- a/public/table/resume3.html
+++ b/public/table/resume3.html
@@ -47,10 +47,10 @@
 	<br>
 	
 	<!-- 이전화면 링크 -->
-	<a href="./resume2.html">Back</a>
+	<a href="./resume2.html"><-Back</a>
 	
 	<!-- 다음화면 링크 -->
-	<a href="./resume4.html">Next</a>
+	<a href="./resume4.html">Next-></a>
 
 </body>
 </html>
