--- a/public/table/resume4.html
+++ b/public/table/resume4.html
@@ -53,10 +53,10 @@
 	<br>
 	
 	<!-- 이전화면 링크 -->
-	<a href="./resume3.html">Back</a>
+	<a href="./resume3.html"><-Back</a>
 	
 	<!-- 다음화면 링크 -->
-	<a href="./resume5.html">Next</a>
+	<a href="./resume5.html">Next-></a>
 
 </body>
 </html>
