--- a/public/table/link.html
+++ b/public/table/link.html
@@ -38,7 +38,10 @@ th, td {
 	</ol>
 	
 	<br>
-		<a href="https://www.naver.com/" target="_blank">네이버</a>
-		<a href="https://www.daum.net/" target="_self">다음</a>
+		<a href="https://www.naver.com/" target="_blank">네이버_초록창</a>
+		<a href="https://www.daum.net/" target="_self">다음_노랑창</a>
+		
+		<a href="../images/resume_template_20220105.docx">다운로드</a>
+		<a href="../images/resume_template_20220105.pdf">다운로드PDF</a>
 </body>
 </html>
