--- a/public/form/inputNumber.html
+++ b/public/form/inputNumber.html
@@ -9,6 +9,26 @@
 
 <body>
 
+	숫자입력 받기
+	<form action="./formResult.html" method="post" id="" name="" enctype="multipart/form-data">
+		<input type="number" id="number" name="number">
+		<br><input type="number" id="" name="" min="1">
+		<br><input type="number" id="" name="" max="5">
+		<br><input type="number" id="" name="" min="1" max="6">
+		<br><input type="number" id="" name="" step="3">
+		<br><input type="number" id="" name="" value="1">
+		
+		<p>sns</p>
+		
+		<select>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>			
+		</select>
+		
+		
+		<input type="submit" value="제출">
+	</form>
 
 </body>
 </html>
