--- a/public/ch0/index.html
+++ b/public/ch0/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE HTML>
-<html lang="ko">
-
+<html>
 <head>
-	<meta charset="uTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>yina</title>
-
+<meta charset="uTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>yina</title>
+<style type="text/css">
+	table, th, td {
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+	
+	th, td {
+		padding: 15px;
+		}
+</style>
 </head>
 
 <body>
