--- a/public/form/inputText.html
+++ b/public/form/inputText.html
@@ -9,14 +9,31 @@
 
 <body>
 	
-	<form action="" method="post" id="form" name="" enctype="multipart/form-data">
-		아이디 : <input type="text" id="id1" name="id1">
-		<br>아이디 : <input type="text" id="" name="" size="50">
-		<br>아이디 : <input type="text" id="" name="" maxlength="20">
-		<br>아이디 : <input type="text" id="" name="" placeholder="아이디">
-		<br>아이디 : <input type="text" id="" name="" value="yina">
+	<form action="" method="get" id="form" name="" enctype="multipart/form-data">
+		아이디 : <input type="text" id="id1" name="id1"> text
+		<br>아이디 : <input type="text" id="" name="" size="50"> size
+		<br>아이디 : <input type="text" id="" name="" maxlength="20"> maxlength
+		<br>아이디 : <input type="text" id="" name="" placeholder="아이디"> placeholder
+		<br>아이디 : <input type="text" id="" name="" value="yina"> value
 		<br>아이디 : <input type="text" id="" name="" size="50" placeholder="아이디를 입력해주세요" value="">
-		<br>아이디 : <input type="text" id="" name="" size="50" autofocus="autofocus">
+		<br>아이디 : <input type="text" id="" name="" size="50" autofocus="autofocus"> autofocus
+		
+		<br>아이디 : <input type="text" id="" name="" size="50" value="윤이나" readonly="readonly"> readonly
+		<br>
+		<p>disabled</p>
+		<select disabled>
+			<option>1
+			<option>2
+			<option selected>3
+		</select>
+		
+		<hr>
+		<br>
+		<p>hidden</p>
+		아이디 : <input type="hidden" id="" name="hidden" value="yes">
+		<p>여기까지</p>
+		
+		
 		
 		<br><input type="button" id="button" name="button" value="제출" onclick="here();">
 	</form>	
