--- a/public/cssExc/cssExcList.html
+++ b/public/cssExc/cssExcList.html
@@ -8,6 +8,105 @@
 
 <body>
 
+	<ul>
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
 
+	<hr>
+
+	<ul style="list-style-type: none;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: disc;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: circle;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: square;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: hebrew;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: lower-greek;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	
+	<hr>
+	
+	<ul style="list-style-type: decimal;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: decimal-leading-zero;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: lower-roman;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: upper-roman;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: lower-alpha;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-type: upper-alpha;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<ul style="list-style-image: url(../images/dot.png);">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ul>
+	<hr>
+	
+	<ol style="list-style-position: inside;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ol>
+	
+	<ol style="list-style-position: outside;">
+		<li>회원 관리</li>
+		<li>사이트 관리</li>
+		<li>시스템 관리</li>
+	</ol>
+	
+	<div style="padding-left: 100px;">
+		<ol style="list-style-position: inside;">
+			<li>회원 관리</li>
+			<li>사이트 관리</li>
+			<li>시스템 관리</li>
+		</ol>
+	</div>
+		
+	
+	
 </body>
 </html>
