--- a/public/cssExc/cssExcColorBg.html
+++ b/public/cssExc/cssExcColorBg.html
@@ -6,7 +6,12 @@
 <title>cssExcColorBg.html</title>
 </head>
 
-<body style="background-image: url(../images/bg_main.jpg);">
+<!-- <body style="background-image: url(../images/bg_main2.png); background-repeat: repeat-x;"> -->
+<!-- <body style="background-image: url(../images/bg_main2.png); background-repeat: repeat-y;"> -->
+<!-- <body style="background-image: url(../images/bg_main2.png); background-size: auto;"> -->
+<!-- <body style="background-image: url(../images/bg_main2.png); background-size: cover;"> -->
+<!-- <body style="background-image: url(../images/bg_main2.png); background-size: 300px 250px;"> -->
+<body style="background-image: url(../images/bg_main2.png); background-size: 60% 80%;">
 
 	<h1 style="color: white;">여기가 어딜까요?</h1>
 	<p>배경색 변경</p>
