--- a/public/excBootstrap/excBtsCard.html
+++ b/public/excBootstrap/excBtsCard.html
@@ -17,8 +17,8 @@
 <body>
 
 
-	<div class="card w-50" style="width: 18rem;">
-	  <img src="../images/bg_main2.png" class="card-img-top" alt="../2.image/gc.png">
+	<div class="card" style="width: 18rem;">
+	  <img src="../images/banana.PNG" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <h5 class="card-title">광고입니다</h5>
 	    <p class="card-text">지금 사이트에 접속해보세요!</p>
@@ -26,18 +26,18 @@
 	  </div>
 	</div>
 	
-	<div class="card w-50" style="width: 18rem;">
-	  <img src="../images/sunwoo.PNG" class="card-img-top" alt="../2.image/gc.png">
+	<div class="card" style="width: 18rem;">
+	  <img src="../images/banana.PNG" class="card-img-top" alt="...">
 	  <div class="card-body">
-	    <h5 class="card-title">선우야 390일 축하해!</h5>
-	    <p class="card-text"><code>엄마 곧 퇴근이다!</code></p>
-	    <a href="#" class="btn btn-primary">Happy 390 days!</a>
+	    <h5 class="card-title">바나나가 웃는다.</h5>
+	    <p class="card-text"><code>꺄륵</code></p>
+	    <a href="#" class="btn btn-primary">Ba na na!!</a>
 	  </div>
 	</div>
 	
 <hr>
 
-	<div class="card w-50">
+	<div class="card">
 	  <div class="card-body">
 	    This is some text within a card body.
 	  </div>
@@ -45,7 +45,7 @@
 
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <div class="card-body">
 	    <h5 class="card-title">3,000원</h5>
 	    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -57,8 +57,8 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
-	  <img src="../images/bg_main2.png" class="card-img-top" alt="../2.image/gc.png">
+	<div class="card" style="width: 18rem;">
+	  <img src="../images/banana.PNG" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <p class="card-text">Some quick example text to build on the 3,000원 and make up the bulk of the card's content.</p>
 	  </div>
@@ -66,7 +66,7 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <ul class="list-group list-group-flush">
 	    <li class="list-group-item">An item</li>
 	    <li class="list-group-item">A second item</li>
@@ -76,7 +76,7 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <div class="card-header">
 	    Featured
 	  </div>
@@ -89,7 +89,7 @@
 
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <ul class="list-group list-group-flush">
 	    <li class="list-group-item">An item</li>
 	    <li class="list-group-item">A second item</li>
@@ -102,8 +102,8 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
-	  <img src="../images/bg_main2.png" class="card-img-top" alt="../2.image/gc.png">
+	<div class="card" style="width: 18rem;">
+	  <img src="../images/banana.PNG" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <h5 class="card-title">3,000원</h5>
 	    <p class="card-text">Some quick example text to build on the 3,000원 and make up the bulk of the card's content.</p>
@@ -121,7 +121,7 @@
 	
 <hr>
 
-	<div class="card w-50">
+	<div class="card">
 	  <div class="card-header">
 	    Featured
 	  </div>
@@ -134,7 +134,7 @@
 	
 <hr>
 
-	<div class="card w-50">
+	<div class="card">
 	  <h5 class="card-header">Featured</h5>
 	  <div class="card-body">
 	    <h5 class="card-title">Special title treatment</h5>
@@ -145,7 +145,7 @@
 	
 <hr>
 
-	<div class="card w-50">
+	<div class="card">
 	  <div class="card-header">
 	    Quote
 	  </div>
@@ -177,7 +177,7 @@
 
 	<div class="row">
 	  <div class="col-sm-6">
-	    <div class="card w-50">
+	    <div class="card">
 	      <div class="card-body">
 	        <h5 class="card-title">구찌 스니커즈 포함 랜덤박스</h5>
 	        <p class="card-text">W우주마켓</p>
@@ -186,7 +186,7 @@
 	    </div>
 	  </div>
 	  <div class="col-sm-6">
-	    <div class="card w-50">
+	    <div class="card">
 	      <div class="card-body">
 	        <h5 class="card-title">Special title treatment</h5>
 	        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -206,7 +206,7 @@
 	  </div>
 	</div>
 	
-	<div class="card w-50">
+	<div class="card">
 	  <div class="card-body">
 	    <h5 class="card-title">3,000원</h5>
 	    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -216,7 +216,7 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <div class="card-body">
 	    <h5 class="card-title">Special title treatment</h5>
 	    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -226,7 +226,7 @@
 	
 <hr>
 
-	<div class="card w-50" style="width: 18rem;">
+	<div class="card" style="width: 18rem;">
 	  <div class="card-body">
 	    <h5 class="card-title">Special title treatment</h5>
 	    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -298,27 +298,27 @@
 	
 <hr>
 
-	<div class="card mb-3">
-	  <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	<div class="card mb-3" style="width: 18rem;">
+	  <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	  <div class="card-body">
 	    <h5 class="card-title">3,000원</h5>
 	    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
 	    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 	  </div>
 	</div>
-	<div class="card w-50">
+	<div class="card">
 	  <div class="card-body">
 	    <h5 class="card-title">3,000원</h5>
 	    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
 	    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 	  </div>
-	  <img src="../2.image/gc.png" class="card-img-bottom" alt="../2.image/gc.png">
+	  <img src="../2.image/gc.png" class="card-img-bottom" alt="...">
 	</div>
 	
 <hr>
 
 	<div class="card bg-dark text-white">
-	  <img src="../2.image/gc.png" class="card-img" alt="../2.image/gc.png">
+	  <img src="../2.image/gc.png" class="card-img" alt="...">
 	  <div class="card-img-overlay">
 	    <h5 class="card-title">3,000원</h5>
 	    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
@@ -331,7 +331,7 @@
 	<div class="card mb-3" style="max-width: 540px;">
 	  <div class="row g-0">
 	    <div class="col-md-4">
-	      <img src="../2.image/gc.png" class="img-fluid rounded-start" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="img-fluid rounded-start" alt="...">
 	    </div>
 	    <div class="col-md-8">
 	      <div class="card-body">
@@ -475,24 +475,24 @@
 <hr>
 
 	<div class="card-group">
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
 	      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 	    </div>
 	  </div>
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
 	      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 	    </div>
 	  </div>
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -504,8 +504,8 @@
 <hr>
 
 	<div class="card-group">
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
@@ -514,8 +514,8 @@
 	      <small class="text-muted">Last updated 3 mins ago</small>
 	    </div>
 	  </div>
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -524,8 +524,8 @@
 	      <small class="text-muted">Last updated 3 mins ago</small>
 	    </div>
 	  </div>
-	  <div class="card w-50">
-	    <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	  <div class="card">
+	    <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	    <div class="card-body">
 	      <h5 class="card-title">3,000원</h5>
 	      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -540,8 +540,8 @@
 
 	<div class="row row-cols-1 row-cols-md-2 g-4">
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -549,8 +549,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -558,8 +558,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요</p>
@@ -567,8 +567,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -581,8 +581,8 @@
 
 	<div class="row row-cols-1 row-cols-md-3 g-4">
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -590,8 +590,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -599,8 +599,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요</p>
@@ -608,8 +608,8 @@
 	    </div>
 	  </div>
 	  <div class="col">
-	    <div class="card w-50">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	    <div class="card">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -623,7 +623,7 @@
 	<div class="row row-cols-1 row-cols-md-3 g-4">
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요  </p>
@@ -632,7 +632,7 @@
 	  </div>
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">This is a short card.</p>
@@ -641,7 +641,7 @@
 	  </div>
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요</p>
@@ -650,7 +650,7 @@
 	  </div>
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">★마감세일★ 사장님이 미쳤어요</p>
@@ -664,7 +664,7 @@
 	<div class="row row-cols-1 row-cols-md-3 g-4">
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.  </p>
@@ -676,7 +676,7 @@
 	  </div>
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -688,7 +688,7 @@
 	  </div>
 	  <div class="col">
 	    <div class="card h-100">
-	      <img src="../2.image/gc.png" class="card-img-top" alt="../2.image/gc.png">
+	      <img src="../2.image/gc.png" class="card-img-top" alt="...">
 	      <div class="card-body">
 	        <h5 class="card-title">3,000원</h5>
 	        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
