--- a/public/responsive/mediaQuery.html
+++ b/public/responsive/mediaQuery.html
@@ -5,21 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>yina</title>
 <style type="text/css">
-	@media screen and (min-width: 1024px){
+	@media screen and (min-width: 1024px) and (max-width: 1600px){
 		h3 {
 			color:blue;
 		}
 	}
-	@media screen and (min-width: 800px) and (max-width: 1023px) {
+	@media screen and (min-width: 768px) and (max-width: 1023px) {
 		h3 {
 			color:green;
 		}
 	}
-	@media screen and (min-width: 700px) and (max-width: 800px) {
+	@media screen and (min-width: 480px) and (max-width: 767px) {
 		h3 {
 			color:red;
 	}
-	@media screen and (min-width: 3px) and (max-width: 699px) {
+	@media screen and (max-width: 479px) {
 		h3 {
 			color:yellow;
 		}
