--- a/public/excBtsLayout/excBtsGutters.html
+++ b/public/excBtsLayout/excBtsGutters.html
@@ -26,12 +26,32 @@
 
 </head>
 <body>
-<div class="container p-100">
-  <div class="row g-1">
-    <div class="col">
-     <div class="p-1 border bg-light">Custom column padding</div>
+<div class="container">
+  <div class="row g-2">
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
     </div>
-    <div class="col">
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+  </div>
+  <div class="row g-2 mt-1">
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col-6">
       <div class="p-3 border bg-light">Custom column padding</div>
     </div>
   </div>
